@@ -1,0 +1,5 @@
+/**
+ * RTPS entities are in this package
+ */
+package net.sf.jrtps.rtps;
+
