@@ -4,12 +4,12 @@ import java.util.Collection;
 import java.util.List;
 
 import net.sf.jrtps.QualityOfService;
-import net.sf.jrtps.Sample;
-import net.sf.jrtps.SampleListener;
-import net.sf.jrtps.WriterProxy;
 import net.sf.jrtps.builtin.ParticipantMessage;
 import net.sf.jrtps.message.parameter.QosLiveliness;
 import net.sf.jrtps.message.parameter.QosLiveliness.Kind;
+import net.sf.jrtps.rtps.Sample;
+import net.sf.jrtps.rtps.SampleListener;
+import net.sf.jrtps.rtps.WriterProxy;
 import net.sf.jrtps.types.GuidPrefix;
 
 import org.slf4j.Logger;
